--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -10,6 +10,6 @@ spec:
   type: api
   lifecycle: production
   owner: group:admins
-  system: Website
+  system: serverlessops-website
   providesApis:
     - resource:serverlessops-catalog-api
