--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   type: api
   lifecycle: production
-  owner: group:admins
+  owner: group:0319y80a3hmm9y7
   system: infrastructure-services
   providesApis:
     - resource:serverlessops-catalog-api
